# alpha_lab

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: launch.json
configs/: backtest.yaml  congress_ticker_sector.csv  country_etf_universe.csv  crypto_intraday.yaml  crypto_intraday_universe.csv  data_sources.yaml  default.yaml  reporting.yaml  us_sector_etf.csv
docs/: README.md  ROADMAP.md  research_to_execution.md
notebooks/: 00_sandbox.ipynb
reports/: crypto_whale_etf_strategy_2026-07-20.html  etf_earnings_season_pre2022.html  etf_strategy_50plus_pre2022.html  etf_strategy_complete_pre2022.html  etf_wmega_xlg_qqq_2026-07-14.html  portfolio_adjustment_research_2026-07-03.html  qqq_putwrite_cash_yield.html  repo_review_2026-07-13.html
scripts/: btc_etf_flow_revision.py  btc_etf_flow_robustness.py  btc_etf_flow_study.py  btc_onchain_exchange_flow_study.py  btc_scaled_onchain_overlay.py  congress_signal_report.py  credit_canary_robustness_audit.py  demo.py  demo.sh  etf_drawdown_recovery_study.py  etf_earnings_season_study.py  etf_strategy_50plus_study.py  etf_strategy_ensemble_recovery_study.py  etf_strategy_ensemble_robustness.py  etf_wmega_xlg_qqq_report.py  eth_onchain_replication.py  generate_crypto_whale_report.py  qqq_putwrite_study.py  render_etf_strategy_complete_report.py  us_sector_c2_option_overlay_study.py  us_sector_rotation_phase2.py  us_sector_rotation_study.py  us_sector_target8_holdout_2022.py  us_sector_target8_study.py
tests/: test_active_mv.py  test_align.py  test_backtest.py  (+33 more)
(+259 files in other folders)
