[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha_lab"
version = "0.1.0"
description = "Personal investment research workbench: notebook-first, package-backed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kelvin Chen" }]
keywords = ["quant", "research", "backtesting", "factor", "portfolio"]

dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
  "requests>=2.31",
  "httpx>=0.27",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "pyarrow>=15.0",
  "polars>=0.20",
  "jupyterlab>=4.1",
  "python-dotenv>=1.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
backtesting = [
  "backtrader>=1.9.78",
  "vectorbt>=0.26",
]
optimization = [
  "cvxpy>=1.4",
  "riskfolio-lib>=5.0",
]
llm = [
  "anthropic>=0.25",
  "openai>=1.20",
  "tiktoken>=0.6",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "ipykernel>=6.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
